<resources>
    <string name="app_name">Login Screen</string>
    <string name="header_text">Please login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_text">login</string>
    <string name="errorMessageInvalidCredentials">Invalid login credentials. Please try again...</string>
    <string name="outOfChances">No more tries left!!</string>
    <string name="authenticated">Login authenticated!</string>
    <string name="counterMessage">tries left!</string>
</resources>
