<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:id="@+id/headerTextView"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTextView"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/buttonPrimary"
        android:text="@string/button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/greenText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="30dp"
        android:text="@string/authenticated"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/redText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/greenText"
        android:layout_marginTop="30dp"
        android:text="@string/errorMessageInvalidCredentials"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/triesText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/redText"
        android:layout_marginTop="30dp"
        android:text="@string/counterMessage"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:visibility="invisible" />


</RelativeLayout>